docs/changes/1.2.0/characters/Wolf.md
# Wolf — 1.2.0

## Changes

### Jab / Tilts

**Up Tilt**
faf: 7 → 6
endlag sped up 1.2x
bkb: 30 → 40
kbg: 120 → 90
damage: all made 10
now uses P+ Up Smash animation (reworked)
improved the animation slightly :)
slowed during startup + hitboxes
sped up endlag

**Down Tilt**
damage: 6 → 8
angle: 361 → 0
iasa: 28 → 25 → 20
given set kb
startup slowed (added FSM 0.4x)
endlag slowed (added FSM 0.6x)

**Forward Tilt**
first hit reduced hitlag, added skb, changed angle
new animation and properties, absed off P+ wolf dash attack
angled variants (up/normal/down) consolidated into a shared implementation
first hit: 3 hitboxes → 2 hitboxes (dmg 5→4, kbg 110→100, bkb 10→20, hitlag 3→1, trajectory 361°→0°)
second hit: 3 hitboxes → 2 hitboxes (kbg 120→100, bkb 40→60, hitlag 0.5→1, trajectory 361°→70°)
total endlag extended (32 → 39 frames)
added mid-endlag speedup (FSM 1.2x)

### Aerial Attacks

**Neutral Air**
fixed hitboxes with no knockback
now only a multihit
damage: 1 → 3
angle: 361 → 365
startup slowed .5x
rest sped up 1.4x
hitbox sizes: 4 → 6
bkb: 25 → 30
rehit rate: 6 → 5

**Forward Air**
endlag sped up 1.55x → 1.8x
improved animation and active frames

**Back Air**
sweetspot damage: 13 → 15
kbg: 96 → 105

**Up Air**
faf: 7 → 6
active frames: 5 → 7

**Down Air**
endlag sped up 1.3x
added iasa: 50
hitbox id 1 moved higher
hitbox duration: 2 → 4
sped up endlag
damage: 13/15 → 16
bkb: 6 → 15

### Smash Attacks

**Forward Smash**
damage: 17 → 18
angle: 361
bkb: 50 → 35
kbg: 75 → 90
animation redone + made 2 hit

**Down Smash**
sweetspot damage: 14 → 16
sourspot damage: 12 → 14
2nd hit unchanged
back hit has same values as front hit
buffed hitbox sizes to help it not miss vs opponents after shine

**Up Smash**
sped up between hits 1.5x
added skb to the first hit: 10
buffed first hit hitbox reach and size
adjusted multihit to link better
final hit damage: 16 → 18
final hit hitlag: 1.8 → 2
reworked from 3 multihit + 3 final hitboxes → 2 multihit + 2 final hitboxes with different positioning (higher Y, forward Z)

### Special Moves

**Neutral B**
sped up 1.2x
laser hitlag: .2 → .6
can now landing cancel

**Side B**
sweetspot angle: 270 → 361
kbg: 80 → 100
damage: 15 → 19
now no longer goes into special fall if this move connects with sweetspot

**Down B**
removed invincibility on all 10 frames of startup
hitboxes first active frame: 8 → 5
shine is now attack cancelable
wolf can cancel his ground and aerial reflector (unlike Fox and Falco)
can now only cancel into attacks after hitbox comes out
hitlag: 1 → 2
damage: 3 → 8

### Other

wolf now has his Ult idle animation (makes him a larger target and easier to hit)
now has Ult run animation

**Dash Attack**
angles: 50/361 → 80
added momentum to startup
faf: 11 → 8
more range
active frames: 5 → 8

**Grab**
buffed range

**Pummel**
slowed to 0.5x

**Up Throw**
kbg: 110 → 85 → 70

**Down Throw**
iasa: 51 → 40
kbg: 86 → 80 → 90
bkb: 30 → 50 → 40

### Character Parameters

| Parameter | Change |
|-----------|--------|
| Run Speed | 1.4 → 1.65 → 1.75 |
| Ground to Air Momentum | buffed |
